@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4ASCIITreeSceneHandler.hh,v 1.4 2001-06-04 15:02:11 johna Exp $
+// $Id: G4ASCIITreeSceneHandler.hh,v 1.5 2001-06-05 09:59:15 johna Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -22,19 +22,16 @@
 #include "g4std/set"
 
 class G4VPhysicalVolume;
-class G4ModelingParameters;
 
 class G4ASCIITreeSceneHandler: public G4VTreeSceneHandler {
 public:
   G4ASCIITreeSceneHandler(G4VGraphicsSystem& system,
 			  const G4String& name);
   virtual ~G4ASCIITreeSceneHandler();
-  void BeginModeling();
-  void EndModeling();
+  virtual void BeginModeling();
+  virtual void EndModeling();
 protected:
-  void Dump(const G4VSolid&);
-  const G4ModelingParameters* fpOriginalMP;  // Keeps pointer to original.
-  G4ModelingParameters* fpNonCullingMP;      // For temporary non-culling.
+  virtual void Dump(const G4VSolid&);
   G4std::set<G4LogicalVolume*> fLVSet;
   typedef G4std::set<G4LogicalVolume*>::iterator LVSetIterator;
   G4std::set<G4VPhysicalVolume*> fReplicaSet;
