@@ -1,4 +1,4 @@
-$Id: History,v 1.2 2001-06-04 15:02:10 johna Exp $
+$Id: History,v 1.3 2001-06-05 09:59:14 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -23,6 +23,9 @@ committal in the CVS repository !
 
 History file for visualization/Tree sub-category
 ------------------------------------------------
+
+5th June 2001  John Allison (vis-V03-01-04)
+- Moved re-useable code from G4ASCIITree to G4VTree.
 
 4th June 2001  John Allison
 - G4ASCIITree: Added logical volume name and solid name and type under
